# Application_Select_major_engineering

./: CMakeLists.txt  README.md  flutter_application_select_major.cpp  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_application_select_major/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: (P1)welcome.dart  (P2)login.dart  (P3)menu.dart  main.dart
lib/Backup/: (P2)login_backup.dart  colorbn(1).dart
lib/menu/menu_CheckGread/: CheckGread.dart
lib/menu/menu_ColorBilndness/: colorbn(1).dart  colorbn(2).dart  colorbn(3).dart  colorbn(4).dart  colorbn(5).dart  colorbn(6).dart  colorbn(7).dart  colorbn(8).dart  colorbn(9).dart  colorbn(welcome).dart  showANS.dart
lib/menu/menu_Profile/: editprofile.dart  viweprofile.dart
lib/menu/menu_SelectMajor/: select_mail_sender.dart  select_major(select).dart  select_major(select_bn).dart  select_major(store).dart  select_major(store_bn).dart  select_major(welcome).dart
lib/menu/menu_Static/: static_lastyear.dart
lib/model/: app_state_model.dart  major_model.dart  static_model.dart  subject_model.dart  user_model.dart
lib/utility/: my_constant.dart  my_dialog.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
